<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Welcome"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/White">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="122dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/imagelogo" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

           <TextView
        android:id="@+id/terxview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_short"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

            <TextView
            android:id="@+id/terxview2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_long"
            android:textAlignment="center" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/White"
        android:orientation="vertical">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorAccent"
            android:backgroundTintMode="src_over"
            android:elevation="5dp"
            android:onClick="OpenSlide"
            android:text="@string/wlcome_button"
            android:textAlignment="center"
            android:textColor="@color/White" />
    </LinearLayout>

</RelativeLayout>